hphp/hack/test/typecheck/strict_switch/just_int.php.new_exhaustivity.exp
WARN: File "just_int.php", line 41, characters 10-10:
This switch case, `0`, occurred before. It will never be matched. (Warn[12019])
  File "just_int.php", line 37, characters 10-10:
  This is the original occurrence of the case.
WARN: File "just_int.php", line 43, characters 10-10:
This switch case, `1`, occurred before. It will never be matched. (Warn[12019])
  File "just_int.php", line 39, characters 10-10:
  This is the original occurrence of the case.
ERROR: File "just_int.php", line 28, characters 3-45:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "just_int.php", line 28, characters 11-12:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
